# mog

./: .editorconfig  .gitignore  Makefile  README.md  视频生成平台_PRD_v1.0_2.docx
services/agent/: Dockerfile  pyproject.toml
services/agent/app/: agent.py  intents.py  main.py  mcp_main.py  mcp_server.py  memory.py  models.py  settings.py
services/agent/app/tools/: asset_tools.py  context_tools.py  pipeline_tools.py  template_tools.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: main.py
services/api/app/agents/: prompts.py  tools.py
services/api/app/core/: config.py  deps.py  logging.py  storage.py  ws_manager.py
services/api/app/models/: __init__.py  asset.py  base.py  character.py  message.py  pipeline_job.py  project.py  project_step.py  segment.py  template.py
services/api/app/pipelines/: __init__.py  base.py  character2image.py  concat.py  image2video.py  inpainting.py  keyframe2video.py  registry.py  talk2video.py  text2image.py  tts_align.py  upscale.py
services/api/app/repositories/: asset_repo.py  base.py  character_repo.py  job_repo.py  project_repo.py  project_step_repo.py  segment_repo.py  template_repo.py
services/api/app/schemas/: agent.py  asset.py  character.py  job.py  pipeline.py  project.py  project_step.py  segment.py  template.py
services/api/app/services/: asset_service.py  context_service.py  job_service.py  pipeline_service.py  project_service.py  project_step_service.py  segment_service.py  template_service.py
services/api/app/tasks/: __init__.py  pipeline_tasks.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_init.py  (+1 more)
services/api/tests/: test_health.py  test_pipeline_registry.py
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: celery_app.py  notifier.py  routing.py  settings.py
(+39 files in other folders)
