[project]
name = "mog-worker"
version = "0.1.0"
description = "Celery workers dispatching ComfyUI pipelines"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "structlog>=24.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
